# simulador_escalonador_processos

./: CMakeLists.txt  README.md  main.c
classes/: filas_lista.c  filas_vetor.c  listas.c  processador.c  system.c  util.c
headers/: dispositivoIO.h  filas_lista.h  processador.h  processos.h  system.h  util.h
